--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@prisma/client": "^5.17.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
