--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Trabajo práctico para la materia \"Desarrollo de Software\"",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,6 @@
     "@types/nodemailer": "^6.4.16",
     "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.8.2"
   }
 }
