--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "form-data": "^4.0.0",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
